@@ -5,19 +5,24 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import ru.mrhellko.library.Entity.Author;
 import ru.mrhellko.library.Entity.Book;
 import ru.mrhellko.library.Entity.BookReview;
+import ru.mrhellko.library.dao.AuthorDAO;
 import ru.mrhellko.library.dao.BookDAO;
 import ru.mrhellko.library.dao.BookReviewDAO;
+import ru.mrhellko.library.dto.BookAuthorDTO;
 import ru.mrhellko.library.dto.BookWithAverageRatingDTO;
 import ru.mrhellko.library.exception.NotFoundException;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -28,6 +33,9 @@ class BookAssemblerTest {
 
     @Mock
     private BookReviewDAO bookReviewDAO;
+
+    @Mock
+    private AuthorDAO authorDAO;
 
     @InjectMocks
     private BookAssembler bookAssembler;
@@ -54,7 +62,9 @@ class BookAssemblerTest {
         Book book = new Book();
         book.setId(1L);
         book.setBookName("name");
-        book.setAuthor("author");
+
+        Author a1 = new Author(1L, "a1");
+        Author a2 = new Author(2L, "a2");
 
         BookReview r1 = new BookReview();
         r1.setRating((byte) 8);
@@ -62,13 +72,16 @@ class BookAssemblerTest {
         r2.setRating((byte) 6);
 
         when(bookDAO.getBookById(1L)).thenReturn(book);
-        when(bookReviewDAO.getReviewByBookId(1L)).thenReturn(List.of(r1, r2));
+        when(bookReviewDAO.getReviewByBookId(1L)).thenReturn(Arrays.asList(r1, r2));
+        when(authorDAO.getAuthorsForBooks(Set.of(1L))).thenReturn(Arrays.asList(
+                new BookAuthorDTO(1L, 1L, "a1"),
+                new BookAuthorDTO(1L, 2L, "a2")));
 
         BookWithAverageRatingDTO dto = bookAssembler.getFullBookWithAverageRatingDTO(1L);
         assertThat(dto).isNotNull();
         assertThat(dto.getId()).isEqualTo(1L);
         assertThat(dto.getBookName()).isEqualTo("name");
-        assertThat(dto.getAuthor()).isEqualTo("author");
+        assertThat(dto.getAuthors()).isEqualTo(List.of(a1, a2));
         assertThat(dto.getAverageRating()).isEqualTo(7.0f);
     }
 
@@ -80,10 +93,14 @@ class BookAssemblerTest {
         Book book = new Book();
         book.setId(1L);
         book.setBookName("name");
-        book.setAuthor("author");
+        List<Author> authors = new ArrayList<>();
+        authors.add(new Author(1L, "author"));
+        book.setAuthors(authors);
 
         when(bookDAO.getBookById(1L)).thenReturn(book);
-        when(bookReviewDAO.getReviewByBookId(1L)).thenReturn(List.of());
+        when(bookReviewDAO.getReviewByBookId(1L)).thenReturn(Arrays.asList());
+        when(authorDAO.getAuthorsForBooks(Set.of(1L))).thenReturn(Arrays.asList(
+                new BookAuthorDTO(1L, 1L, "author")));
 
         BookWithAverageRatingDTO dto = bookAssembler.getFullBookWithAverageRatingDTO(1L);
         assertThat(dto).isNotNull();
@@ -98,19 +115,22 @@ class BookAssemblerTest {
         Book b1 = new Book();
         b1.setId(1L);
         b1.setBookName("b1");
-        b1.setAuthor("a1");
+        Author a1 = new Author(1L, "a1");
 
         Book b2 = new Book();
         b2.setId(2L);
         b2.setBookName("b2");
-        b2.setAuthor("a2");
+        Author a2 = new Author(2L, "a2");
 
         BookReview r = new BookReview();
         r.setRating((byte) 10);
 
-        when(bookDAO.getAll()).thenReturn(List.of(b1, b2));
-        when(bookReviewDAO.getReviewByBookId(1L)).thenReturn(List.of(r));
-        when(bookReviewDAO.getReviewByBookId(2L)).thenReturn(List.of());
+        when(bookDAO.getAll()).thenReturn(Arrays.asList(b1, b2));
+        when(bookReviewDAO.getReviewByBookId(1L)).thenReturn(Arrays.asList(r));
+        when(bookReviewDAO.getReviewByBookId(2L)).thenReturn(Arrays.asList());
+        when(authorDAO.getAuthorsForBooks(Set.of(1L, 2L))).thenReturn(Arrays.asList(
+                new BookAuthorDTO(1L, 1L, "a1"),
+                new BookAuthorDTO(2L, 2L, "a2")));
 
         List<BookWithAverageRatingDTO> dtos = bookAssembler.getFullAllBooks();
         assertThat(dtos).hasSize(2);
@@ -119,6 +139,41 @@ class BookAssemblerTest {
                 .containsExactly(1L, 2L);
         assertThat(dtos.get(0).getAverageRating()).isEqualTo(10.0f);
         assertThat(dtos.get(1).getAverageRating()).isNull();
+        assertThat(dtos.get(0).getAuthors()).isEqualTo(List.of(a1));
+        assertThat(dtos.get(1).getAuthors()).isEqualTo(List.of(a2));
+    }
+
+    /**
+     * Если авторы отсутствуют в новой книге, то выбрасывается IllegalArgumentException.
+     */
+    @Test
+    void updateBookNoAuthorsTest() {
+        Book input = new Book();
+        input.setId(1L);
+        input.setBookName("n");
+
+        assertThatThrownBy(() -> bookAssembler.updateBook(input, 1L))
+                .isInstanceOf(IllegalArgumentException.class);
+
+        verify(bookDAO, never()).updateBook(any());
+    }
+
+    /**
+     * Если авторы в новой книге не найдены, то выбрасывается IllegalArgumentException.
+     */
+    @Test
+    void updateBookNotFoundAuthorTest() {
+        Book input = new Book();
+        input.setId(1L);
+        input.setBookName("n");
+        input.setAuthors(List.of(new Author(1L, "a")));
+
+        when(authorDAO.getAuthorById(1L)).thenReturn(null);
+
+        assertThatThrownBy(() -> bookAssembler.updateBook(input, 1L))
+                .isInstanceOf(IllegalArgumentException.class);
+
+        verify(bookDAO, never()).updateBook(any());
     }
 
     /**
@@ -126,11 +181,13 @@ class BookAssemblerTest {
      */
     @Test
     void updateBookNotFoundTest() {
-        when(bookDAO.getBookById(1L)).thenReturn(null);
-
         Book input = new Book();
         input.setBookName("n");
-        input.setAuthor("a");
+        Author author = new Author(1L, "a");
+        input.setAuthors(List.of(author));
+
+        when(bookDAO.getBookById(1L)).thenReturn(null);
+        when(authorDAO.getAuthorById(1L)).thenReturn(author);
 
         Book updated = bookAssembler.updateBook(input, 1L);
         assertThat(updated).isNull();
@@ -147,48 +204,60 @@ class BookAssemblerTest {
         Book existing = new Book();
         existing.setId(1L);
         existing.setBookName("old");
-        existing.setAuthor("old");
-
-        when(bookDAO.getBookById(1L)).thenReturn(existing);
 
         Book input = new Book();
         input.setBookName("new");
-        input.setAuthor("new");
+        Author a2 = new Author(2L, "newAuthor");
+        List<Author> newAuthors = new ArrayList<>();
+        newAuthors.add(a2);
+        input.setAuthors(newAuthors);
+
+        when(bookDAO.getBookById(1L)).thenReturn(existing);
+        when(authorDAO.getAuthorsForBooks(Set.of(1L))).thenReturn(Arrays.asList(
+                new BookAuthorDTO(1L, 1L, "old")
+        ));
+        when(authorDAO.getAuthorById(2L)).thenReturn(a2);
+        when(bookDAO.deleteBookAuthor(1L, 1L)).thenReturn(1);
 
         Book updated = bookAssembler.updateBook(input, 1L);
         assertThat(updated).isNotNull();
         assertThat(updated.getId()).isEqualTo(1L);
         assertThat(updated.getBookName()).isEqualTo("new");
-        assertThat(updated.getAuthor()).isEqualTo("new");
+        assertThat(updated.getAuthors()).isEqualTo(List.of(a2));
 
         verify(bookDAO).updateBook(existing);
+        verify(bookDAO).saveBookAuthor(1L, 2L);
+        verify(bookDAO).deleteBookAuthor(1L, 1L);
     }
 
     /**
      * Сохранение книги делегируется в DAO и возвращает результат сохранения.
      */
     @Test
-    void saveBookTest() throws Exception {
+    void saveBookTest() {
         Book input = new Book();
         input.setBookName("n");
-        input.setAuthor("a");
+        Author author = new Author(1L, "a");
+        input.setAuthors(List.of(author));
 
         Book saved = new Book();
         saved.setId(10L);
         saved.setBookName("n");
-        saved.setAuthor("a");
+        saved.setAuthors(List.of(author));
 
         when(bookDAO.saveBook(input)).thenReturn(saved);
+        when(authorDAO.getAuthorById(1L)).thenReturn(author);
 
         Book result = bookAssembler.saveBook(input);
         assertThat(result).isSameAs(saved);
+        verify(bookDAO).saveBookAuthor(10L, 1L);
     }
 
     /**
      * Если удаление книги в DAO вернуло 0, то выбрасывается NotFoundException.
      */
     @Test
-    void deleteBookNotFoundTest() throws Exception {
+    void deleteBookNotFoundTest() {
         when(bookDAO.deleteBookById(1L)).thenReturn(0);
 
         assertThatThrownBy(() -> bookAssembler.deleteBook(1L))
@@ -201,7 +270,7 @@ class BookAssemblerTest {
      * Если удаление книги прошло успешно, то исключение не выбрасывается.
      */
     @Test
-    void deleteBookOkTest() throws Exception {
+    void deleteBookOkTest() {
         when(bookDAO.deleteBookById(1L)).thenReturn(1);
 
         bookAssembler.deleteBook(1L);
@@ -217,12 +286,30 @@ class BookAssemblerTest {
         Book b = new Book();
         b.setId(1L);
         b.setBookName("b");
-        b.setAuthor("a");
+        b.setAuthors(List.of(new Author(1L, "a")));
 
         when(bookDAO.getBooksByAuthorName("a")).thenReturn(List.of(b));
         when(bookReviewDAO.getReviewByBookId(1L)).thenReturn(List.of());
 
         List<BookWithAverageRatingDTO> dtos = bookAssembler.getBooksByAuthorName("a");
+        assertThat(dtos).hasSize(1);
+        assertThat(dtos.getFirst().getId()).isEqualTo(1L);
+    }
+
+    /**
+     * Поиск книг по id автора возвращает DTO и корректно проставляет averageRating.
+     */
+    @Test
+    void getBooksByAuthorIdTest() {
+        Book b = new Book();
+        b.setId(1L);
+        b.setBookName("b");
+        b.setAuthors(List.of(new Author(1L, "a")));
+
+        when(bookDAO.getBooksByAuthorId(1L)).thenReturn(List.of(b));
+        when(bookReviewDAO.getReviewByBookId(1L)).thenReturn(List.of());
+
+        List<BookWithAverageRatingDTO> dtos = bookAssembler.getBooksByAuthorId(1L);
         assertThat(dtos).hasSize(1);
         assertThat(dtos.getFirst().getId()).isEqualTo(1L);
     }
